# ZQuestClassic

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mailmap  .project  007.C  007.c  150-quest-loader-for-250.cpp  1st.qst  210test.qst  253patches.txt  2nd.qst  3rd.qst  AGLOGO.CPP  AGLOGO.H  ALL_BUILD.vcproj  AUTHORS  BACKUP.BAT  CMakeCache.txt  CMakeLists.txt  CMakeZcCore.cmake  COLORS.CPP  COLORS.H  CONTRIBUTE.md  CONTRIBUTING  CONTRIBUTING.md  DEBUG.CPP  DEBUG.H  DEFDATA.CPP  DEFDATA.H  DUH.CPP  EB_FONTS.H  EB_TEST.CPP  EDITBOX.C  EDITBOX.H  ENDING.CPP  ENDING.H  EditboxModel.cpp  EditboxNew.h  (+316 more)
allegro/: AUTHORS  CHANGES  CMakeLists.txt  aclocal.m4  allegro.mft  configure  configure.in
allegro/allegro/: keyboard.h
allegro/cmake/: FindDInput.cmake  FindDSound.cmake  FindDXGuid.cmake
allegro/fixed/: aintern.h  file.c  file.h  wwnd.c
allegro/misc/: allegro-config.in  allegro.m4  allegro.spec  embedman.bat  findheaders.c  fixdll.bat  mdhelper.bat  msvchelp.c  pkgreadme._tx  release.txt  scanexp.c
packaging/: CMakeLists.txt  CPackConfig.cmake  Info.plist  MacDMGSetup.scpt  generate_mac_bundle_icons.sh  hdiutil_repeat.sh
src/: CMakeLists.txt  Clipboard Text.txt  ConsoleLogger.cpp  ConsoleLogger.h  EditboxModel.cpp  EditboxNew.h  EditboxView.cpp  FFCore.h  Get_MapData.cpp  GraphicsBackend.cpp  GraphicsBackend.h  LINUX_Console.cpp  PARSER_COMPILE_ERRORS.txt  SetMapscreenFlags.cpp  Set_Mapdata.cpp  Undo.txt  WindowsScaling.cpp  WindowsScaling.h  advanced_music.cpp  advanced_music.h  aglogo.cpp  aglogo.h  al5_example_main.c  al5_example_main.cpp  alleg_compat.cpp  allegro_wrapper.h  bind.h  bitmap_drawing.cpp  colorname.cpp  colorname.h  colors.cpp  colors.h  colourdata.cpp  comboScripts.cpp  combodata.cpp  combodata_bytecode_cases.cpp  combodata_defines.cpp  combodata_ffasm.cpp  compat_config.h  compilerid.h  (+307 more)
src/al5_example/: al5_example_main.c
src/angelscript/: aszc.cpp  aszc.h  scriptContext.cpp  scriptContext.h  scriptData.h  util.cpp  util.h
src/backend/: AllBackends.h  Backend.cpp  Backend.h  GraphicsBackend.cpp  GraphicsBackend.h  MouseBackend.cpp  MouseBackend.h  PaletteBackend.cpp  PaletteBackend.h  SFXBackend.cpp  SFXBackend.h
src/base/: about.cpp  about.h  alleg_compat.cpp  alleg_compat.h  allegro_wrapper.h  autocombo.cpp  autocombo.h  check.h  colors.cpp  colors.h  combo.cpp  combo.h  compiler.h  containers.cpp  containers.h  containers_test.cpp  cpool.cpp  cpool.h  cpos_info.cpp  cpos_info.h  dmap.cpp  dmap.h  emscripten_utils.cpp  emscripten_utils.h  expected.h  files.cpp  files.h  flags.h  fonts.cpp  fonts.h  general.cpp  general.h  gui.cpp  gui.h  handles.cpp  handles.h  headers.h  hotkey.cpp  hotkey.h  http.cpp  (+70 more)
src/build_modules/: angelscript_unity.cpp  gui_module.cpp  zc_as_module.cpp  zc_gui_module.cpp  zc_module.cpp  zc_objects_module.cpp  zc_sprite_module.cpp  zc_subscreen_module.cpp  zq_as_module.cpp  zq_dialog_module.cpp  zq_gui_module.cpp  zq_misc_module.cpp  zq_module.cpp  zq_script_module.cpp
src/core/: autocombo.cpp  combo.cpp  combo.h  combo_trigger.xtable  cpool.cpp  cpos_info.cpp  cpos_info.h  dmap.h  flags.h  fonts.cpp  handles.cpp  handles.h  initdata.cpp  initdata.h  jwinfsel.cpp  mapscr.cpp  mapscr.h  misctypes.h  msg_scroll.cpp  msg_scroll.h  msgstr.cpp  msgstr.h  qrs.cpp  qrs.h  qst.cpp  qst.h  qst_advmusic.cpp  qst_cheats.cpp  qst_colors.cpp  qst_comboaliases.cpp  qst_combos.cpp  qst_csets.cpp  qst_dmaps.cpp  qst_doors.cpp  qst_favorites.cpp  qst_ffscript.cpp  qst_guys.cpp  qst_header.cpp  qst_herosprites.cpp  qst_icons.cpp  (+16 more)
src/dialog/: README.md  about.cpp  about.h  alert.cpp  alert.h  alertfunc.cpp  alertfunc.h  bottleshop.cpp  bottleshop.h  bottletype.cpp  bottletype.h  cheatCodes.cpp  cheatCodes.h  cheat_codes.cpp  cheat_codes.h  cheat_dialog.cpp  cheat_dialog.h  cheatkeys.cpp  cheatkeys.h  checklist.cpp  checklist.h  combo_trigger_editor.cpp  combo_trigger_editor.h  comboeditor.cpp  comboeditor.h  combopool.cpp  combopool.h  combowizard.cpp  combowizard.h  common.cpp  common.h  compilesetting.cpp  compilesetting.h  compilezscript.cpp  compilezscript.h  control_binding.cpp  control_binding.h  control_schemes.cpp  control_schemes.h  ditherpick.cpp  (+163 more)
src/enemy/: falling_rock.cpp  falling_rock.h  hive.cpp  hive.h  land_worm.cpp  land_worm.h  mage_floating.cpp  mage_floating.h  mage_teleporting.cpp  mage_teleporting.h  spin_tile.cpp  spin_tile.h  unicorn.cpp  unicorn.h
src/experimental/: Array.cpp  Array.h  Config.h  FFCScript.h  Preprocessor.cpp  Preprocessor.h  ScriptCommon.h  ScriptContextPool.cpp  ScriptContextPool.h  ScriptEngine.cpp  ScriptEngine.h  ScriptRegistrar.cpp  UnitTests.hpp  Utility.cpp  Utility.h  ZCMath.cpp  ZCMath.h  ZCString.h  angelscript.h
src/gui/: EditboxModel.cpp  EditboxNew.h  EditboxView.cpp  README.md  alert.cpp  alert.h  builder.h  buildutil.cpp  buildutil.h  button.cpp  button.h  checkBox.cpp  checkBox.h  checkbox.cpp  checkbox.h  checkbox_qr.cpp  checkbox_qr.h  colorsel.cpp  colorsel.h  common.cpp  common.h  contents.cpp  controller.cpp  cornerselect.cpp  cornerselect.h  ddpanel.cpp  ddpanel.h  dialog.cpp  dialog.h  dialogEvent.h  dialogMessage.h  dialogRef.cpp  dialogRef.h  dialogRunner.cpp  dialogRunner.h  dialog_message.h  dialog_ref.cpp  dialog_ref.h  dialog_runner.cpp  dialog_runner.h  (+89 more)
src/item/: clock.h  dinsFire.cpp  hookshot.cpp  hookshot.h  itemEffect.cpp  itemEffect.h  nayrusLove.cpp
src/launcher/: launcher.cpp  launcher.h  launcher_dialog.cpp  launcher_dialog.h  theme_editor.cpp  theme_editor.h
src/metadata/: compilersig.h.sig  devsig.h.sig  metadata.h  readme.txt  versionsig.h
src/osx/: FolderManager.h  FolderManager.mm
src/parser/: .gitignore  AST.cpp  AST.h  ASTVisitors.cpp  ASTVisitors.h  AST_exp.h  BuildVisitors.cpp  BuildVisitors.h  ByteCode - Copy.cpp  ByteCode - Copy.h  ByteCode.cpp  ByteCode.h  CommentUtils.cpp  CommentUtils.h  CompileError.cpp  CompileError.h  CompileError.xtable  CompileOption.cpp  CompileOption.h  CompileOption.xtable  Compiler.h  CompilerUtils.cpp  CompilerUtils.h  DataStructs.cpp  DataStructs.h  DocVisitor.cpp  DocVisitor.h  (+64 more)
(+6554 files in other folders)
